# Document-Tailoring-Framework

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
doc_tailor/: __init__.py  config.py  graph.py  models.py  plugin.py  state.py
doc_tailor/nodes/: __init__.py  evaluate.py  extract_and_match.py  generate.py  intake.py  research.py  select_content.py
doc_tailor/parsers/: file_reader.py
doc_tailor/plugins/resume/: __init__.py  content.py  models.py  parser.py  prompts.py  validation.py
doc_tailor/prompts/: common.py
doc_tailor/utils/: validation.py
resume_tailor/: __init__.py  config.py  graph.py  models.py  state.py
resume_tailor/nodes/: __init__.py  evaluate.py  extract_and_match.py  generate.py  intake.py  research.py  select_content.py
resume_tailor/parsers/: file_reader.py  resume_parser.py
resume_tailor/prompts/: common.py  evaluate.py  extract_and_match.py  generate.py  select_content.py
resume_tailor/utils/: validation.py
tests/: test_parsing.py  test_validation.py
tests/fixtures/: sample_job_posting.txt  sample_resume.txt
tests/test_nodes/: test_evaluate.py  test_intake.py
